ignore env commit

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 #MAIN API
-API_BASE_URL='https://api.nailsa2z.com'
+API_BASE_URL='https://localhost:7777'
 
 #VERSION
  API_VERSION = v1
 
  #PORT
-PORT=6900
+PORT=7700
