--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test-proxy-server",
+  "name": "proxy-server",
   "packageManager": "yarn@3.5.0",
-  "description": "My TypeScript project",
+  "description": "My proxy server project",
   "main": "api/server.js",
   "scripts": {
     "build": "npx tsc",
@@ -26,6 +26,7 @@
     "eslint": "^8.38.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-slow-down": "^1.6.0",
     "helmet": "^6.1.5",
     "http-proxy-middleware": "^2.0.6",
     "morgan": "^1.10.0"
